Deleted GFBase64* implementations from pre-JDK8 times
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>